--- a/src/style.css
+++ b/src/style.css
@@ -46,9 +46,10 @@ li a {
 }
 
 main {
-    /* display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
+    flex-direction: column;
     width: 70%;
     height: 400px;
     color: #ffd900;
@@ -65,4 +66,9 @@ main {
 h1 {
     font-size: 40px;
     margin-bottom: 30px;
+}
+
+img {
+    width: 20px;
+    height: 20px;
 }
