--- a/src/style.css
+++ b/src/style.css
@@ -22,27 +22,33 @@ body {
 nav {
     text-align: center;
     width: 100%;
-    height: 100px;
-    background-color: #fff;
-    border: 1px solid #a52a2a;
-
+    height: 80px;
+    background-color: #f8f8f8;
 }
 
 ul {
     display: flex;
     justify-content: center;
-    padding: 40px;
     font-size: 24px;
 }
 
-li {
+.nav-btn {
 list-style: none; 
-width: 10rem; 
+
 }
 
-li a {
-    text-decoration: none;
+.nav-btn a {
+    display: block;
+    height: 80px;
+    width: 150px;
     color: #028888;
+    text-decoration: none;
+    padding: 20px 0;
+}
+
+.nav-btn a:hover {
+    background-color: #022020bc;
+    color: #f8f8f8;
 }
 
 main {
