--- a/src/style.css
+++ b/src/style.css
@@ -5,16 +5,16 @@
 }
 
 body {
-    display: flex;
-    flex-direction: column;
     width: 100vw;
-    min-height: 100vh;
+    height: 100vh;
     gap: 50px;
     background: url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80') center/ cover fixed;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #content {
+    display: flex;
+    flex-direction: column;
     width: inherit;
     height: inherit;
 }
@@ -52,23 +52,31 @@ list-style: none;
 }
 
 main {
+    /* width: 100vw;
+    height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 70%;
-    height: 400px;
+    flex: 1 0 auto;
     color: #ffd900;
-    background-color: #022020bc;
-    margin: 20px auto;
-    box-shadow: 0px 0px 5px 0px #028888;
 }
 
-.div {
+.div, .card {
+    width: 60%;
+    height: 300px;
     text-align: center;
+    background-color: #022020bc;
     padding: 20px;
 }
 
+.cards{
+    width: 100%;
+    margin: auto;
+}
+.card {
+    margin: 50px auto;
+}
 h1 {
     font-size: 40px;
     margin-bottom: 30px;
