--- a/src/style.css
+++ b/src/style.css
@@ -5,21 +5,27 @@
 }
 
 body {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     gap: 50px;
     background: url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80') center/ cover fixed;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 #content {
     display: flex;
     flex-direction: column;
+    gap: 20px;
     width: inherit;
     height: inherit;
 }
 
 nav {
+    position: sticky;
     text-align: center;
     width: 100%;
     height: 80px;
@@ -52,8 +58,6 @@ list-style: none;
 }
 
 main {
-    /* width: 100vw;
-    height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,11 +67,15 @@ main {
 }
 
 .div, .card {
-    width: 60%;
+    width: 50%;
     height: 300px;
     text-align: center;
-    background-color: #022020bc;
+    background-color: #02202070;
     padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 0 5px 1px #022020,
+        inset 0 0 10px 5px, 
+            inset 0 0 5px 10px #022020;
 }
 
 .cards{
@@ -75,8 +83,13 @@ main {
     margin: auto;
 }
 .card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 50px auto;
+
 }
+
 h1 {
     font-size: 40px;
     margin-bottom: 30px;
