--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,8 @@ body {
     gap: 50px;
     background: url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80') center/ cover fixed;
     font-family: Arial, Helvetica, sans-serif;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 body::-webkit-scrollbar {
@@ -19,7 +21,6 @@ body::-webkit-scrollbar {
 #content {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     width: inherit;
     height: inherit;
 }
@@ -44,16 +45,16 @@ list-style: none;
 }
 
 .nav-btn a {
-    display: block;
-    height: 80px;
-    width: 150px;
-    color: #028888;
     text-decoration: none;
+    display: block;
+    width: 150px;
+    height: 80px;
+    color: #028888;
     padding: 20px 0;
 }
 
 .nav-btn a:hover {
-    background-color: #022020bc;
+    background-color: #02202090;
     color: #f8f8f8;
 }
 
@@ -63,21 +64,23 @@ main {
     align-items: center;
     flex-direction: column;
     flex: 1 0 auto;
-    color: #ffd900;
+    color: #f8f8f8;
 }
 
 .div, .card {
     width: 50%;
     height: 300px;
-    text-align: center;
-    background-color: #02202070;
-    padding: 20px;
+    background-color: #022020cc;
     border-radius: 15px;
     box-shadow: 0 0 5px 1px #022020,
         inset 0 0 10px 5px, 
             inset 0 0 5px 10px #022020;
 }
 
+.div {
+    text-align: center;
+    padding: 50px;
+}
 .cards{
     width: 100%;
     margin: auto;
@@ -86,16 +89,43 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 20px;
     margin: 50px auto;
 
+}
+
+.menu-img {
+    width: 30%;
+    padding-left: 30px;
+}
+
+
+.menu-img img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+.menu-desc{
+    width: 70%;
+    padding: 15px;
+}
+
+.menu-desc h3 {
+    text-align: center;
+    font-size: xx-large;
+    margin-bottom: 20px;
+}
+
+.menu-desc h3, .div h1 {
+    color: #ffd700;
+}
+
+.menu-desc p, .div p {
+    font-size: large;
+    font-weight: 100;
 }
 
 h1 {
     font-size: 40px;
     margin-bottom: 30px;
-}
-
-img {
-    width: 20px;
-    height: 20px;
 }
