--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
     width: 100%;
     height: 100vh;
     gap: 50px;
-    background: url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80') center/ cover fixed;
+    background: url('./images/background.jpg') center/ cover fixed;
     font-family: Arial, Helvetica, sans-serif;
     -ms-overflow-style: none;
     scrollbar-width: none;
